--- a/public/offline.html
+++ b/public/offline.html
@@ -3,27 +3,44 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Offline - SDM Handal</title>
+		<title>SDM Handal - Offline</title>
 		<style>
-			body {
+			* {
 				margin: 0;
 				padding: 0;
-				font-family: system-ui, -apple-system, sans-serif;
-				background: linear-gradient(to bottom, #f3f4f6, #e5e7eb);
+				box-sizing: border-box;
+			}
+			
+			body {
+				font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+				background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
 				min-height: 100vh;
 				display: flex;
 				align-items: center;
 				justify-content: center;
+				padding: 20px;
+				color: white;
 			}
-
+			
 			.container {
 				text-align: center;
-				padding: 2rem;
-				max-width: 90%;
-				width: 400px;
+				max-width: 400px;
+				background: rgba(255, 255, 255, 0.1);
+				backdrop-filter: blur(10px);
+				border-radius: 20px;
+				padding: 40px 30px;
+				border: 1px solid rgba(255, 255, 255, 0.2);
 			}
-
+			
 			.icon {
+				width: 80px;
+				height: 80px;
+				margin: 0 auto 20px;
+				background: rgba(255, 255, 255, 0.2);
+				border-radius: 50%;
+				display: flex;
+				align-items: center;
+				justify-content: center;
 				width: 120px;
 				height: 120px;
 				margin-bottom: 2rem;
